ui/assets/css/main.css
/* ... */
#meetup .aside img {
    border-radius: 50%;
    float: left;
    width: 70px;
    height: 70px;
    margin-right: 15px;
}

.cta-going {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
    margin-top: 10px;
}

/* Meetup page ask question
   ========================================================================== */
#meetup .ask {
    background: white;
}

.ask textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border-radius: 4px;
    background-color: #f8f8f8;
    font-size: 16px;
    resize: none;
}

.ask textarea:focus {
    outline: none;
    border-width: 0;
    box-shadow: 0 0 5px #53e3a6;
}

.ask button {
    width: 30%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
    margin-top: 10px;
}

#question:hover {
    cursor: pointer;
}

/* Meetup page questions
   ========================================================================== */
#question {
    box-shadow: 0 0 10px #e3e3e3;
}

.flex {
    display: flex;
    align-items: center;
    margin-top: 10px;
}

.vote {
    margin: 0 25px;
    font-weight: bold;
    color: #919A9F;
}
.vote i {
    transition: all 50ms ease;
}

.vote .up i:hover {
    -webkit-transform: scale(1.3);
    transform: scale(1.3);
    color: #53e3a6;
}

.vote .down i:hover {
    -webkit-transform: scale(1.3);
    transform: scale(1.3);
    color: #f0776c;
}

.votes {
    margin-top: 3px;
}

.up, .down {
    height: 30px;
    width: 30px;
    cursor: pointer;
}

.profile {
    margin: 8px 10px 0 0;
    text-align: center;
}
.profile img {
    width: 75px;
    border-radius: 50%;
}

.question-body {
    margin-top: 5px;
    padding: 0 15px;
}


/* ==========================================================================
   Add answer // Question page
   ========================================================================== */
#answer {
    margin-left: 100px;
}

.answer-body {
    margin-top: 5px;
    padding: 0 15px;
}

#author {
    color: #53e3a6;
}

.add-answer {
    padding-top: 30px;
    margin-left: 120px;
}

.add-answer textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border-radius: 4px;
    background-color: #f8f8f8;
    font-size: 16px;
    resize: none;
}

.add-answer textarea:focus {
    outline: none;
    border-width: 0;
    box-shadow: 0 0 5px #53e3a6;
}

.add-answer button {
    width: 30%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
    margin-top: 10px;
}


/* ==========================================================================
   User Profile
   ========================================================================== */
#profile-page {
    display: flex;
    justify-content: space-between;
}

.user-profile {
    color: #919A9F;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.user-profile img {
    border-radius: 50%;
    float: left;
    width: 100px;
    height: 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
}

/* Activity feed
   ========================================================================== */
.activity-feed {
    padding: 15px;
    list-style: none;
}

.activity-feed .feed-item {
    position: relative;
    padding-bottom: 20px;
    padding-left: 30px;
    border-left: 2px solid #e4e8eb;
}

.activity-feed .feed-item:last-child {
    border-color: transparent;
}

.activity-feed .feed-item::after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: -6px;
    width: 10px;
    height: 10px;
    border-radius: 6px;
    background: #fff;
    border: 1px solid #f0776c;
}

.activity-feed .feed-item .date {
    display: block;
    position: relative;
    top: -5px;
    color: #8c96a3;
    text-transform: uppercase;
    font-size: 13px;
}

.activity-feed .feed-item .text {
    position: relative;
    top: -3px;
}


/* ==========================================================================
   Admin page
   ========================================================================== */
#admin-page {
    display: flex;
    justify-content: space-between;
}

#admin-page i {
    padding: 10px;
}

#admin-page i:hover {
    cursor: pointer;
}

.fa-plus {
    color: #53e3a6;
}

.fa-trash-alt {
    color: #f0776c;
}

/* New Meetup
   ========================================================================== */
#new-meetup {
    margin: 20px auto;
    padding: 30px 25px;
    border: 1px solid #c4c4c4;
    max-width: 50%;
}

h1.new-title {
    margin: -28px -25px 25px;
    padding: 15px 25px;
    line-height: 30px;
    font-size: 25px;
    font-weight: 300;
    color: #adadad;
    text-align:center;
    background: #f7f7f7;

}

.new-input {
    width: 100%;
    height: 50px;
    margin-bottom: 25px;
    padding-left:10px;
    font-size: 15px;
    background: #fff;
    border: 1px solid #ccc;
    border-radius: 4px;
}

#new-meetup-form textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border-radius: 4px;
    font-size: 15px;
    resize: none;
    border: 1px solid #ccc;
    font-family: Roboto, serif;
}

.new-input:focus {
    border-color:#6e8095;
    outline: none;
}

#new-meetup-form textarea:focus {
    border-color:#6e8095;
    outline: none;
}

.new-button {
    width: 100%;
    height: 50px;
    padding: 0;
    font-size: 20px;
    color: #fff;
    text-align: center;
    background: #f0776c;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline:0;
}
/* ... */

